[package]
name = "agb"
version = "0.1.0"
authors = ["Corwin Kuiper <corwin@kuiper.dev>"]
edition = "2018"

[profile.dev]
opt-level = 2

[profile.release]
panic = "abort"
lto = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.0"
