[package]
name = "agb-debug"
version = "0.20.0"
edition = "2021"
authors = ["Gwilym Inzani <email@gwilym.dev>"]
license = "MPL-2.0"
description = "CLI utility to convert agb stack trace dumps into human readable stack traces"
repository = "https://github.com/agbrs/agb"

[dependencies]
thiserror = "1"
clap = { version = "4", features = ["derive"] }
addr2line = { version = "0.22", default-features = false, features = [
    "rustc-demangle",
    "std-object",
] }
colored = "2"
rmp-serde = "1"
lz4_flex = "0.11"
