[package]
name = "agb-debug"
version = "0.20.3"
edition = "2021"
authors = ["Gwilym Inzani <email@gwilym.dev>"]
license = "MPL-2.0"
description = "CLI utility to convert agb stack trace dumps into human readable stack traces"
repository = "https://github.com/agbrs/agb"

[dependencies]
addr2line = { version = "0.23", default-features = false, features = ["rustc-demangle"] }
gimli = { version = "0.30", default-features = false, features = ["endian-reader", "std"] }
object = { version = "0.36", default-features = false, features = ["read"] }

thiserror = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
rmp-serde = "1"
lz4_flex = "0.11"
