[package]
name = "agb_entry"
version = "0.6.0"
authors = ["Gwilym Kuiper <gw@ilym.me>"]
edition = "2018"
license = "MPL-2.0"
description = "Macro for declaring the entry point for a game using the agb library"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.73", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.27"
quote = "1.0.9"
rand = "0.8.4"