[package]
name = "agb_fixnum"
version = "0.22.1"
edition = "2024"
license = "MPL-2.0"
description = "Library for abstracting over fixed precision numbers. Designed for use with the agb library for the Game Boy Advance"
repository = "https://github.com/agbrs/agb"
categories = ["no-std", "no-std::no-alloc"]

[features]
serde = ["dep:serde"]

[dependencies]
const_soft_float = { version = "0.1", features = ["no_std"] }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1", features = [
    "derive",
], default-features = false, optional = true }

[build-dependencies]
quote = "1"
