[package]
name = "agb-gbafix"
version = "0.19.1"
edition = "2021"
authors = ["Gwilym Inzani <email@gwilym.dev>"]
license = "MPL-2.0"
description = "CLI utility to convert ELF file to valid GBA ROM"
repository = "https://github.com/agbrs/agb"

[dependencies]
elf = "0.7"
anyhow = "1"
clap = "4"
rmp-serde = "1"
lz4_flex = "0.11"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
