[package]
name = "agb-gbafix"
version = "0.22.0"
edition = "2024"
authors = ["Gwilym Inzani <email@gwilym.dev>"]
license = "MPL-2.0"
description = "CLI utility to convert ELF file to valid GBA ROM"
repository = "https://github.com/agbrs/agb"

[dependencies]
elf = "0.8"
anyhow = "1"
clap = "4"
rmp-serde = "1"
lz4_flex = "0.11"
