[package]
name = "agb_hashmap"
version = "0.21.1"
edition = "2021"
license = "MPL-2.0"
description = "A simple no_std hashmap implementation intended for use in the `agb` library"
repository = "https://github.com/agbrs/agb"
exclude = ["/benches"]

[features]
allocator_api = []
serde = ["dep:serde"]

[dependencies]
rustc-hash = { version = "1", default-features = false }
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
lazy_static = "1.4"
quickcheck = "1"
