[package]
name = "agb_image_converter"
version = "0.7.0"
authors = ["Gwilym Kuiper <gw@ilym.me>"]
edition = "2018"
license = "MPL-2.0"
description = "Library for converting graphics for use on the Game Boy Advance"

[lib]
proc-macro = true

[dependencies]
image = { version = "0.23", default-features = false, features = [ "png", "bmp" ] }
toml = "0.5"
serde = { version = "1", features = ["derive"] }
syn = "1"
proc-macro2 = "1"
quote = "1"
asefile = "0.3.4"
