[package]
name = "agb_image_converter"
version = "0.12.2"
authors = ["Gwilym Kuiper <gw@ilym.me>"]
edition = "2018"
license = "MPL-2.0"
description = "Library for converting graphics for use on the Game Boy Advance"
repository = "https://github.com/agbrs/agb"

[lib]
proc-macro = true

[dependencies]
image = { version = "0.23", default-features = false, features = [ "png", "bmp" ] }
toml = "0.5"
serde = { version = "1", features = ["derive"] }
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"
quote = "1"
asefile = "0.3.5"
fontdue = "0.7"
