[package]
name = "agb_image_converter"
version = "0.18.1"
authors = ["Gwilym Inzani <gw@ilym.me>"]
edition = "2021"
license = "MPL-2.0"
description = "Library for converting graphics for use on the Game Boy Advance"
repository = "https://github.com/agbrs/agb"

[lib]
proc-macro = true

[dependencies]
image = { version = "0.23", default-features = false, features = [
    "png",
    "bmp",
] }
syn = { version = "2", features = ["proc-macro", "parsing"] }
proc-macro2 = "1"
quote = "1"
asefile = "0.3.6"
fontdue = "0.8"
