[package]
name = "agb_macros"
version = "0.13.0"
authors = ["Gwilym Kuiper <gw@ilym.me>"]
edition = "2021"
license = "MPL-2.0"
description = "Macro for declaring the entry point for a game using the agb library"
repository = "https://github.com/agbrs/agb"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
proc-macro2 = "1"
quote = "1"
