[package]
name = "agb_sound_converter"
version = "0.14.0"
authors = ["Gwilym Kuiper <gw@ilym.me>"]
edition = "2021"
license = "MPL-2.0"
description = "Library for converting wavs for use on the Game Boy Advance"
repository = "https://github.com/agbrs/agb"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
lto = true
debug = true

[lib]
proc-macro = true

[dependencies]
hound = "3.5"
syn = "2"
proc-macro2 = "1"
quote = "1"
