[package]
name = "agb"
version = "0.14.0"
authors = ["Corwin Kuiper <corwin@kuiper.dev>", "Gwilym Kuiper <gw@ilym.me>"]
edition = "2021"
description = "Library for Game Boy Advance Development"
license = "MPL-2.0"
repository = "https://github.com/agbrs/agb"

[features]
default = ["testing"]
testing = []

[dependencies]
bitflags = "2"
agb_image_converter = { version = "0.14.0", path = "../agb-image-converter" }
agb_sound_converter = { version = "0.14.0", path = "../agb-sound-converter" }
agb_macros = { version = "0.14.0", path = "../agb-macros" }
agb_fixnum = { version = "0.14.0", path = "../agb-fixnum" }
agb_hashmap = { version = "0.14.0", path = "../agb-hashmap" }
bare-metal = "1"
modular-bitfield = "0.11"
rustc-hash =  { version = "1", default-features = false }

[package.metadata.docs.rs]
default-target = "thumbv6m-none-eabi"
targets = []

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
codegen-units = 1