[package]
name = "embassy-agb"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Embassy async support for Game Boy Advance development with agb"
repository = "https://github.com/agbrs/agb"
categories = ["embedded", "no-std", "asynchronous", "game-engines"]

[features]
default = ["executor", "time-driver-timer2"]

## Enable embassy executor integration
executor = ["dep:embassy-executor", "embassy-executor/arch-spin", "embassy-executor/executor-thread"]

## Enable embassy time integration
time = ["dep:embassy-time"]

## Use Timer0 as the time driver
time-driver-timer0 = ["_time-driver"]

## Use Timer1 as the time driver  
time-driver-timer1 = ["_time-driver"]

## Use Timer2 as the time driver
time-driver-timer2 = ["_time-driver"]

## Use Timer3 as the time driver
time-driver-timer3 = ["_time-driver"]

## Testing support
testing = []

# Internal features
_time-driver = ["dep:embassy-time-driver", "time", "embassy-time-driver/tick-hz-32_768"]

[dependencies]
agb = { version = "0.22.5", path = "../agb", features = ["embassy"] }
embassy-agb-macros = { version = "0.1.0", path = "../embassy-agb-macros" }

# Embassy core
embassy-executor = { git = "https://github.com/embassy-rs/embassy", optional = true }
embassy-time = { git = "https://github.com/embassy-rs/embassy", optional = true }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", optional = true }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }

# Utilities
critical-section = "1.1"
portable-atomic = { version = "1.6.0", default-features = false, features = ["unsafe-assume-single-core", "fallback"] }
heapless = { version = "0.8", default-features = false }

[build-dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[package.metadata.docs.rs]
default-target = "thumbv4t-none-eabi"
cargo-args = ["-Zbuild-std=core,alloc"]
