[package]
name = "mgba-test-runner"
version = "0.1.0"
authors = ["Corwin Kuiper <corwin@kuiper.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
regex = "1"
anyhow = "1"
image = { version = "0.24", default-features = false, features = [ "png", "bmp" ] }

[build-dependencies]
cc = { version = "1", features = ["parallel"] }
bindgen = "0.60"