[package]
name = "amplitude"
version = "0.1.0"
authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = { version = "0.21.1", path = "../../agb" }

[profile.dev]
opt-level = 2
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
