[package]
name = "hyperspace-roll"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = { version = "0.10.0", path = "../../agb", features = ["freq32768"] }
bare-metal = "1"

[profile.dev]
opt-level = 2
debug = true


[profile.release]
panic = "abort"
lto = true
debug = true
