[package]
name = "hyperspace-roll"
version = "0.1.0"
authors = [""]
edition = "2024"

[dependencies]
agb = { version = "0.23.0", path = "../../agb" }
serde = { version = "1", default-features = false, features = ["derive"] }
examples_save = { version = "0.1.0", path = "../examples-save" }

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
