[package]
name = "the-dungeon-puzzlers-lament"
version = "0.1.0"
authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = { version = "0.18.1", path = "../../agb" }
slotmap = { version = "1", default-features = false }
agb_tracker = { version = "0.18.1", path = "../../tracker/agb-tracker" }

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true

[build-dependencies]
tiled = { version = "0.11", default-features = false }
quote = "1"
proc-macro2 = "1"
