[package]
name = "the-purple-night"
version = "0.1.0"
authors = [
    "Corwin Kuiper <corwin@kuiper.dev>",
    "Gwilym Inzani <gw@ilym.me>",
    "Sam Williams",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = { path = "../../agb", version = "0.20.0" }
generational-arena = { version = "0.2", default-features = false }

[build-dependencies]
quote = "1.0.10"
tiled = { version = "0.9.4", default-features = false }

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
