[package]
name = "tapir-sounds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
eframe = "0.22"
egui_file = "0.10"
env_logger = "0.10"
fastrand = "2.0"
hound = "3.5"
im = "15"
midir = "0.9"
midly = { version = "0.5", default-features = false, features = ["std"] }
petgraph = "0.6"
ron = "0.8"
rustfft = "6.1"
serde = { version = "1.0", features = ["derive"] }
tinyaudio = "0.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
