[package]
name = "agb_midi_core"
version = "0.21.3"
authors = ["Gwilym Inzani <gw@ilym.me>"]
edition = "2021"
license = "MPL-2.0"
description = "Library for converting MIDI files for use with agb-tracker on the Game Boy Advance. You shouldn't use this package directly"
repository = "https://github.com/agbrs/agb"

[dependencies]
rustysynth = "1.3"
midly = { version = "0.5", default-features = false, features = [
    "alloc",
    "std",
] }

agb_tracker_interop = { version = "0.21.3", path = "../agb-tracker-interop" }
agb_fixnum = { version = "0.21.3", path = "../../agb-fixnum" }
